force-app/main/default/objects/Objective__c/Objective__c.object-meta.xml
<CustomObject>
    <description>Renamed from Objective. Used with North American Account Planning</description>
    <label>Milestone</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>