force-app/main/default/objects/Objective__c/fields/Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome__c</fullName>
    <label>Desired Outcome</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>