force-app/main/default/objects/Objective__c/fields/Due_Date_Warning__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Warning__c</fullName>
    <formula>IF( 
ISPICKVAL( Status__c , &quot;Completed&quot;) = False &amp;&amp;  Due_Date__c &lt; TODAY(), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Past Due&quot;), 
IF(
ISPICKVAL( Status__c , &quot;Completed&quot;) = False &amp;&amp;  Due_Date__c -TODAY() &lt;=14, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Approaching Due Date&quot;), &quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Warning</label>
    <type>Text</type>
</CustomField>