force-app/main/default/objects/Objective__c/fields/Running_User_Assigned_to_Me_Filter__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Assigned_to_Me_Filter__c</fullName>
    <formula>if ( $User.Id = Assigned_To__r.Id  , &quot;My Assigned Objectives&quot;, &quot;Not&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User Assigned to Me Filter</label>
    <type>Text</type>
</CustomField>