force-app/main/default/objects/Objective__c/recordTypes/INTL_Objective.recordType-meta.xml
<RecordType>
    <fullName>INTL_Objective</fullName>
    <active>true</active>
    <label>INTL_Objective</label>
</RecordType>