force-app/main/default/objects/Objective__c/recordTypes/Strategic_Objective.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Objective</fullName>
    <active>false</active>
    <description>More global in nature and/or reach across all service lines</description>
    <label>Strategic Objective</label>
</RecordType>