force-app/main/default/objects/Objective__c/recordTypes/Tactical_Objective.recordType-meta.xml
<RecordType>
    <fullName>Tactical_Objective</fullName>
    <active>true</active>
    <description>Clearly actionable items assigned to account plan team to achieve overall account plan strategy</description>
    <label>Objective</label>
</RecordType>