force-app/main/default/objects/Objective__c/listViews/My_Objectives.listView-meta.xml
<ListView>
    <fullName>My_Objectives</fullName>
    <columns>Account_Plan__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Due_Date_Warning__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Objective__c.Tactical_Objective</value>
    </filters>
    <filters>
        <field>Running_User_Assigned_to_Me_Filter__c</field>
        <operation>equals</operation>
        <value>My Assigned Objectives</value>
    </filters>
    <label>My Objectives</label>
    <language>en_US</language>
</ListView>