force-app/main/default/objects/Objective__c/listViews/My_Objectives_w_o_a_Due_Date.listView-meta.xml
<ListView>
    <fullName>My_Objectives_w_o_a_Due_Date</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Assigned_To__c</columns>
    <columns>Account_Plan__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Due_Date_Warning__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Running_User_Assigned_to_Me_Filter__c</field>
        <operation>equals</operation>
        <value>My Assigned Objectives</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>My Objectives w/o a Due Date</label>
    <language>en_US</language>
</ListView>