force-app/main/default/objects/Objective__c/listViews/My_Past_Due_Objectives.listView-meta.xml
<ListView>
    <fullName>My_Past_Due_Objectives</fullName>
    <booleanFilter>1 AND (2 or 3) AND 4</booleanFilter>
    <columns>Assigned_To__c</columns>
    <columns>Account_Plan__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Due_Date__c</columns>
    <columns>Due_Date_Warning__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Running_User_Assigned_to_Me_Filter__c</field>
        <operation>equals</operation>
        <value>My Assigned Objectives</value>
    </filters>
    <label>My Past Due Objectives</label>
    <language>en_US</language>
</ListView>