force-app/main/default/objects/Objective__c/listViews/My_Team_s_Open_Objectives.listView-meta.xml
<ListView>
    <fullName>My_Team_s_Open_Objectives</fullName>
    <columns>Account_Plan__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Due_Date_Warning__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Team&apos;s Open Objectives</label>
    <language>en_US</language>
</ListView>