force-app/main/default/objects/Objective__c/listViews/Objectives_Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>Objectives_Assigned_to_Me</fullName>
    <columns>Account_Plan__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Running_User_Assigned_to_Me_Filter__c</field>
        <operation>equals</operation>
        <value>My Assigned Objectives</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>**Objectives Assigned to Me (OPEN)</label>
    <language>en_US</language>
</ListView>